cmake_minimum_required(VERSION 3.16)
project(cpp_study)

set(CMAKE_CXX_STANDARD 14)
add_executable(0
        main.cpp)

add_executable(1_6_1
        1_C和Cpp/1_6输入输出/1.cpp)

add_executable(1_6_2
        1_C和Cpp/1_6输入输出/2.cpp)

add_executable(1_7_1
        1_C和Cpp/1_7变量定义位置/1.cpp)

add_executable(1_7_2
        1_C和Cpp/1_7变量定义位置/2.cpp)

add_executable(1_8_1
        1_C和Cpp/1_8布尔类型/1.cpp)

add_executable(1_8_2
        1_C和Cpp/1_8布尔类型/2.cpp)

add_executable(1_8_3
        1_C和Cpp/1_8布尔类型/3.cpp)

add_executable(1_9_1
        1_C和Cpp/1_9const/1.cpp)

add_executable(1_9_1_c
        1_C和Cpp/1_9const/1.c)

add_executable(1_9_2_c
        1_C和Cpp/1_9const/2.c 1_C和Cpp/1_9const/2_1.c)

add_executable(1_9_2
        1_C和Cpp/1_9const/2.cpp 1_C和Cpp/1_9const/2_1.cpp)

add_executable(1_9_3
        1_C和Cpp/1_9const/3.cpp 1_C和Cpp/1_9const/3_1.cpp 1_C和Cpp/1_9const/3.h)

add_executable(1_10_1
        1_C和Cpp/1_10new和delete/1.cpp)

add_executable(1_12_1
        1_C和Cpp/1_12inlie_define内联函数替换宏/1.cpp)

add_executable(1_13_1
        1_C和Cpp/1_13_inline_func_规范使用内联函数/1.cpp 1_C和Cpp/1_13_inline_func_规范使用内联函数/1_module.cpp)


######################################
add_executable(2_1_1
        2_类和对象/2_1类和对象创建/1.cpp)

add_executable(2_1_2
        2_类和对象/2_1类和对象创建/2.cpp)

add_executable(2_3_1
        2_类和对象/2_3访问权限及类封装/1.cpp)


add_executable(2_4_1
        2_类和对象/2_4对象内存模型/1.cpp)

add_executable(2_5_1
        2_类和对象/2_5编译原理和成员函数/1.cpp)

add_executable(2_6_1
        2_类和对象/2_6构造函数/1.cpp)

add_executable(2_6_2
        2_类和对象/2_6构造函数/2.cpp)

add_executable(2_7_1
        2_类和对象/2_7init_list_初始化列表/1.cpp)

add_executable(2_7_2
        2_类和对象/2_7init_list_初始化列表/2.cpp)

add_executable(2_7_3
        2_类和对象/2_7init_list_初始化列表/3.cpp)

add_executable(2_7_4
        2_类和对象/2_7init_list_初始化列表/4.cpp)

add_executable(2_8_1
        2_类和对象/2_8_xigou_析构函数/1.cpp)

add_executable(2_8_2
        2_类和对象/2_8_xigou_析构函数/2.cpp)

add_executable(2_9_1
        2_类和对象/2_9object_arry_对象数组/1.cpp)

add_executable(2_9_2
        2_类和对象/2_9object_arry_对象数组/2.cpp)

add_executable(2_10_1
        2_类和对象/2_10成员对象和封闭类/1.cpp)

add_executable(2_10_2
        2_类和对象/2_10成员对象和封闭类/2.cpp)

add_executable(2_11_1
        2_类和对象/2_11_this指针/1.cpp)

add_executable(2_12_1
        2_类和对象/2_12_static静态成员变量/1.cpp)

add_executable(2_13_1
        2_类和对象/2_13_static_func_静态成员函数/1.cpp)

add_executable(2_15_1
        2_类和对象/2_15_const_object_对象/1.cpp)


add_executable(2_16_1
        2_类和对象/2_16_friend_func_class_友元函数友元类/1.cpp)

add_executable(2_16_2
        2_类和对象/2_16_friend_func_class_友元函数友元类/2.cpp)

add_executable(2_16_3
        2_类和对象/2_16_friend_func_class_友元函数友元类/3.cpp)

add_executable(2_17_1
        2_类和对象/2_17_class_field_是一种作用域/1.cpp)

add_executable(2_17_2
        2_类和对象/2_17_class_field_是一种作用域/2.cpp)

add_executable(2_18_1
        2_类和对象/2_18_class_struct/1.cpp)

add_executable(2_19_1
        2_类和对象/2_19_string/1.cpp)

add_executable(2_19_2
        2_类和对象/2_19_string/2.cpp)


add_executable(2_19_3
        2_类和对象/2_19_string/3.cpp)

add_executable(2_19_4
        2_类和对象/2_19_string/4.cpp)

add_executable(2_19_5
        2_类和对象/2_19_string/5.cpp)

add_executable(2_19_6
        2_类和对象/2_19_string/6.cpp)

add_executable(2_19_7
        2_类和对象/2_19_string/7.cpp)

add_executable(2_19_8
        2_类和对象/2_19_string/8.cpp)

add_executable(2_19_9
        2_类和对象/2_19_string/9.cpp)

add_executable(2_19_10
        2_类和对象/2_19_string/10.cpp)





######################################
add_executable(3_1_1
        3_yinyong_引用/3_1_yinyong_引用入门/1.cpp)

add_executable(3_1_2
        3_yinyong_引用/3_1_yinyong_引用入门/2.cpp)

add_executable(3_1_3
        3_yinyong_引用/3_1_yinyong_引用入门/3.cpp)

add_executable(3_1_4
        3_yinyong_引用/3_1_yinyong_引用入门/4.cpp)

add_executable(3_2_1
        3_yinyong_引用/3_2_yinyong_引用本质/1.cpp)

add_executable(3_2_2
        3_yinyong_引用/3_2_yinyong_引用本质/2.cpp)

add_executable(3_3_1
        3_yinyong_引用/3_3_yinyong_bind_temp_data_绑定临时数据/1.cpp)

add_executable(3_3_2
        3_yinyong_引用/3_3_yinyong_bind_temp_data_绑定临时数据/2.cpp)

add_executable(3_3_3
        3_yinyong_引用/3_3_yinyong_bind_temp_data_绑定临时数据/3.cpp)


####################################################################


add_executable(4_1_1
        4_inherit_继承与派生/4_1_inherit_继承/1.cpp)

add_executable(4_2_1
        4_inherit_继承与派生/4_2_three_inherit_三种继承/1.cpp)

add_executable(4_2_2
        4_inherit_继承与派生/4_2_three_inherit_三种继承/2.cpp)

add_executable(4_3_1
        4_inherit_继承与派生/4_3_inherit_name_cover_名字遮蔽/1.cpp)

add_executable(4_3_2
        4_inherit_继承与派生/4_3_inherit_name_cover_名字遮蔽/2.cpp)

add_executable(4_4_1
        4_inherit_继承与派生/4_4_scope_nesting_作用域嵌套/1.cpp)

add_executable(4_4_2
        4_inherit_继承与派生/4_4_scope_nesting_作用域嵌套/2.cpp)

add_executable(4_5_1
        4_inherit_继承与派生/4_5_inherit_mem_继承的内存模型/1.cpp)

add_executable(4_5_2
        4_inherit_继承与派生/4_5_inherit_mem_继承的内存模型/2.cpp)

add_executable(4_5_3
        4_inherit_继承与派生/4_5_inherit_mem_继承的内存模型/3.cpp)

add_executable(4_6_1
        4_inherit_继承与派生/4_6_base_inherit_基类和派生类构造/1.cpp)

add_executable(4_6_2
        4_inherit_继承与派生/4_6_base_inherit_基类和派生类构造/2.cpp)

add_executable(4_7_1
        4_inherit_继承与派生/4_7_base_inherit_基类和派生类析构函数/1.cpp)